packages/domain/tests/fixtures/negative/computed-dynamic-import.fixture.ts
const moduleName = "./identity.js";

void import(moduleName);
void import(`./${moduleName}`);
void import(/* scanner-bypass */ moduleName);
